[metadata]
name = jasmine_etl
description = "Jasmine's ETL backend service"
long_description = file: README.md
version = 0.1.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities


[bdist_wheel]
universal = 1

[options]
packages = find:
include_package_data = True
install_requires =
    amqp
    celery
    flower
    pottery
    PyMySQL
    SQLAlchemy


[options.entry_points]
console_scripts =
    
[options.extras_require]
dev = black; flake8; isort; mypy; pre-commit; pytest; pytest-cov; types-redis

[isort]
profile = black
atomic = True
force_sort_within_sections = True

[tool:pytest]
addopts = --doctest-modules
doctest_optionflags=ELLIPSIS
filterwarnings =
    ignore::DeprecationWarning

[flake8]
ignore = E203, E266, E501, W503, F841
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[mypy]
files = jasmine
ignore_missing_imports = true
