[metadata]
name = jasmine_sql
description = "Jasmine ETL's SQL parser and translator"
long_description = file: README.md
version = 0.1.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities


[bdist_wheel]
universal = 1

[options]
packages = find:
include_package_data = True
install_requires =
    antlr4-python3-runtime
    graphviz

[options.entry_points]
console_scripts =
    display_sql = jasmine.sql.pretty_print:display_example_query
    display_transformed_sql = jasmine.sql.transform:display_transformed_query
    
[options.extras_require]
dev = black; flake8; isort; mypy; pre-commit; pytest; pytest-cov

[isort]
profile = black
atomic = True
force_sort_within_sections = True
skip = autogen,SQLLexer.py,SQLParser.py,SQLParserVisitor.py,SQLParserListener.py
multi_line_output = 3
known_first_party=jasmine,jasmine.etl,jasmine.models,jasmine.sql,jasmine.webserver

[tool:pytest]
addopts = --doctest-modules  --ignore=jasmine_sql/parser/autogen --ignore=jasmine_sql/parser/SQLLexer.py --ignore=jasmine_sql/parser/SQLParser.py --ignore=jasmine_sql/parser/SQLParserVisitor.py --ignore=jasmine_sql/parser/SQLParserListener.py
doctest_optionflags=ELLIPSIS
filterwarnings =
    ignore::DeprecationWarning

[flake8]
ignore = E203, E266, E501, W503, F841
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[mypy]
files = jasmine_sql
ignore_missing_imports = true
exclude = autogen,SQLLexer.py,SQLParser.py,SQLParserVisitor.py,SQLParserListener.py
