[metadata]
name = jasmine_webserver
description = Jasmine ETL webserver.
long_description = file: README.md
version = 0.1.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities


[bdist_wheel]
universal = 1

[options]
packages = find:
include_package_data = True
install_requires =
    amqp
    ariadne
    celery
    requests-oauthlib
    SQLAlchemy
    uvicorn
    PyMySQL
    jasmine-models
    jasmine-etl


[options.entry_points]
console_scripts =
    jasmine_initialize_schema = jasmine_webserver.app:initialize_schema

[options.extras_require]
dev = black; flake8; isort; mypy; pre-commit; pytest; pytest-cov

[tool:pytest]
addopts = --doctest-modules
doctest_optionflags=ELLIPSIS
filterwarnings =
    ignore::DeprecationWarning

[isort]
profile = black
atomic = True
force_sort_within_sections = True
multi_line_output = 3
known_first_party=jasmine,jasmine.etl,jasmine.models,jasmine.sql,jasmine.webserver

[flake8]
ignore = E203, E266, E501, W503, F841, W291
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[mypy]
files = jasmine_webserver
ignore_missing_imports = true
